# specmate.io

./: .gitignore  CLAUDE.md  README.md  architecture.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py  models.py
apps/api/app/core/: config.py  db.py  rate_limit.py  rate_limit_config.py
apps/api/app/routers/: ai_demo.py  billing.py  connectors.py  drift.py  flag_removed.py  generation.py  publish.py  publish_ado.py  publish_github.py  reports.py  sources.py
apps/api/app/services/: audit.py
apps/api/app/services/ai/: adapter.py  claude_adapter.py  config.py  logging_adapter.py  pricing.py
apps/api/app/services/billing/: metering.py  stripe_reporting.py
apps/api/app/services/connectors/: ado.py  ado_auth.py  ado_publish.py  confluence.py  (+11 more)
apps/api/tests/: audit_cleanup.py  test_models.py
apps/api/tests/core/: test_rate_limit.py  test_rate_limit_config.py
apps/api/tests/routers/: test_ai_demo.py  test_connectors.py  test_drift.py  test_flag_removed.py  test_generation.py  test_publish.py  test_publish_ado.py  test_publish_github.py  test_rate_limit_middleware.py  test_reports.py  test_sources.py  test_targeted_regeneration.py
apps/api/tests/services/: test_ado_auth.py  test_ai_config.py  test_ai_pricing.py  test_billing_metering.py  test_claude_adapter.py  test_connector_extractors.py  test_dedupe.py  test_docx_parser.py  test_format_adapter.py  test_jira_connect_auth.py  test_pdf_parser.py  test_source_diff.py  test_spreadsheet_parser.py  test_text_parser.py  test_transport.py
(+197 files in other folders)
