[project]
name = "specmate-api"
version = "0.1.0"
description = "SpecMate backend — ingestion parsing, AI pipeline, connector sync"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "anthropic>=0.68.0",
    "python-docx>=1.1.2",
    "azure-storage-blob>=12.24.0",
    "aiohttp>=3.11.0",
    "pypdf>=5.1.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    # PDF rendering for snapshot exports + approval reports (Issues 8.4/8.5).
    # Was already a dev-group dep (test fixtures) — promoted, not newly introduced.
    "reportlab>=4.2.5",
    "stripe>=15.3.0",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "reportlab>=4.2.5",
    "types-openpyxl>=3.1.5",
    "types-reportlab>=4.5.1.20260712",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
